Validation performance improvements, parallel worker.